# franzplot-compute

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.MIT  NOTICE  README.md  build.rs
.github/workflows/: macos_build.yml  test_upload.yml  ubuntu_20_04.yml
compile_resources/: FranzplotIcon.icns  info.plist  istruzioni franzplot.txt
example_scenes/: bezier_2.frzp  bezier_3.frzp  bezier_4.frzp  builtin_transforms.frzp  circ_to_half_sphere.frzp  dancing_bez.frzp  dice_orientation.frzp  gonna_anna_WIP.frzp  gonna_anna_WIP2.frzp  gonna_anna_WIP3.frzp  gonna_anna_WIP4.frzp  gonna_anna_v1.frzp  gonna_anna_v2.frzp  gonna_anna_v20.frzp  gonna_anna_v20_empty.frzp  matcap_test.frzp  math_functions.frzp  math_functions_with_error.frzp  matrix_0d.frzp  matrix_1d.frzp  matrix_prefab_rotation.frzp  matrix_prefab_translation.frzp  orbiting_points.frzp  perspective_points.frzp  primitives.frzp  same_param_transform.frzp  sample_1d_0d.frzp  sample_2d_1d.frzp  sample_parameter.frzp  simple_0d.frzp  simple_1d.frzp  simple_2d.frzp  simple_plane.frzp  simple_primitive.frzp  simple_vector.frzp  sole_terra_luna.frzp  torsion.frzp  transform_0d_0d.frzp  transform_0d_0d_v2.frzp  transform_0d_1d.frzp  (+9 more)
ferre_example/: elenco.json  gonna_anna_v20.frzp  other_test.frzp  segmento_ruota.frzp
garbage/: index.buffer  vertex.buffer
include/: demo.h
resources/: custom_dejavu.sfd
resources/scenes/: circ_to_half_sphere.frzp  circ_to_half_sphere.json  dancing_bez.json  matcap_test.json  node_duplicate_test.json  orbiting_points.frzp  orbiting_points.json  plane.json  plane_test.frzp  surf_curve_transform.json  surf_sphere.json  test_curve_rendering.json  test_parametric_matrix_curve.json  test_parametric_matrix_surface.json  test_transform_rendering.json  transformed_point.lz4
src/: camera.rs  compute_block.rs  compute_chain.rs  demo.cpp  demo.rs  device_manager.rs  file_io.rs  main.rs  model.rs  node_graph.rs  renderer.rs  rust_gui.rs  shader.frag  shader.vert  shader_processing.rs  state.rs  testing_room.rs  texture.rs  util.rs
src/computable_scene/: compute_chain.rs  globals.rs  mod.rs  scene_renderer.rs
src/computable_scene/compute_block/: bezier.rs  curve.rs  interval.rs  matrix.rs  mod.rs  plane.rs  point.rs  prefab.rs  rendering.rs  sample.rs  surface.rs  transform.rs  vector.rs  vector_rendering.rs
src/compute_block/: curve.rs  interval.rs  matrix.rs  mod.rs  point.rs  rendering.rs  surface.rs  surface_renderer.rs  transform.rs
src/compute_graph/: bezier.rs  curve.rs  geometry_render.rs  globals.rs  interval.rs  interval_compute.wgsl  matrix.rs  mod.rs  operation.rs  plane.rs  point.rs  prefab.rs  sample.rs  surface.rs  test_curve.wgsl  transform.rs  vector.rs  vector_render.rs
src/cpp_gui/: imgui_shims.h  imnodes_shims.cpp  imnodes_shims.h  mod.rs  pointer_shims.cpp  pointer_shims.h
src/cpp_gui/imnodes-5959729/: imnodes.cpp
src/cpp_gui/imnodes-ee6d407/: imnodes.cpp
src/cpp_gui/include/: attribute.h  globals.h  graph.h  gui.h  library.h  node.h
src/cpp_gui/src/: attribute.cpp  graph.cpp  gui.cpp  library.cpp  node.cpp
src/gui/: ferre_gui.rs  mod.rs  node_gui.rs
src/parser/: expressions.pest  mod.rs
src/rendering/: axes.vert  billboard.vert  camera.rs  compute_block_processing.rs  curve_shader.frag  curve_shader.vert  matcap.frag  matcap.vert  matcap.wgsl  mod.rs  model.rs  scene_renderer.rs  solid.frag  solid.vert  surface_mesh.rs  surface_normals.comp  surface_normals.cs  surface_shader.frag  surface_shader.vert  texture.rs  wireframe.frag  wireframe.vert
src/state/: action.rs  mod.rs  user_state.rs
src/tests/: mod.rs
