[package]
name = "franzplot-compute"
version = "21.4.0"
authors = ["francesco.cattoglio <francesco.cattoglio@gmail.com>"]
edition = "2021"

[[bin]]
name = "franzplot"
path = "src/main.rs"

[features]
teachers-edition = []
dev-tools = []
all = ["teachers-edition", "dev-tools"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
bytemuck = "1.2"
wgpu = { version = "0.11", features = ["trace", "spirv"] }
num-iter = "0.1"
anyhow = "1.0"
futures = { version = "0.3.10", features = ["thread-pool"] }
env_logger = "0.9"
glam = "0.11"
maplit = "1.0"
winit = "0.25"
tobj = "2.0"
image = "0.23"
png = "0.16.8"
smol_str = { version = "0.1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.6.4"
clap = "2.33"
obj = "0.10"
imgui = "0.8.0"
imgui-winit-support = "0.8.0"
imgui-wgpu = "0.18"
#imgui-wgpu = { git = 'https://github.com/kylc/imgui-wgpu-rs.git', rev = 'fbbc0cfc7de25a4821980cb2170195c7b3b0fcf4' }
wgpu-subscriber = "0.1"
cxx = "1.0.56"
pathfinding = "2.0"
indexmap = "1.6"
rand = "0.8"
hexasphere = "3.1"
rfd = "0.2.2"
pest = "2.1"
pest_derive = "2.1"
shaderc = "0.6"

[build-dependencies]
cxx-build = "1.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
debug = true

[profile.dev.package.image]
opt-level = 2

#[patch.crates-io]
#wgpu-core = { path = "../wgpu/wgpu-core" }
#wgpu-hal = { path = "../wgpu/wgpu-hal" }
#wgpu-types = { path = "../wgpu/wgpu-types" }
#wgpu-info = { path = "../wgpu/wgpu-info" }

#[patch."https://github.com/gfx-rs/gfx"]
#gfx-hal = { path = "../gfx/src/hal" }
#gfx-backend-empty = { path = "../gfx/src/backend/empty" }
#gfx-backend-vulkan = { path = "../gfx/src/backend/vulkan" }
#gfx-backend-gl = { path = "../gfx/src/backend/gl" }
#gfx-backend-dx12 = { path = "../gfx/src/backend/dx12" }
#gfx-backend-dx11 = { path = "../gfx/src/backend/dx11" }
#gfx-backend-metal = { path = "../gfx/src/backend/metal" }
