[package]
name = "franzplot-compute"
version = "23.1.0"
authors = ["franzplot developers"]
about = ["Curve e Superfici"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "franzplot"
path = "src/main.rs"

[features]
teachers-edition = []
dev-tools = []
all = ["teachers-edition", "dev-tools"]

[dependencies]
wgpu = { version = "0.16", features = ["trace", "spirv"] }
winit = { version="0.28", features = ["x11"] }
chrono = { version = "0.4", features = ["serde"] }
pollster = "0.2"
egui = "0.22"
egui-winit = "0.22"
egui-wgpu = "0.22"
#egui = { git = "https://github.com/emilk/egui", rev = "60b4f5e3fe00fe3f840374846dfd241817e6bf1e" }
#egui-winit = { git = "https://github.com/emilk/egui", rev = "60b4f5e3fe00fe3f840374846dfd241817e6bf1e" }
#egui-wgpu = { git = "https://github.com/emilk/egui", rev = "60b4f5e3fe00fe3f840374846dfd241817e6bf1e", features = ["winit"] }

bytemuck = { version = "1.4", features = ["derive"] }
num-iter = "0.1"
anyhow = "1.0"
futures = { version = "0.3.10", features = ["thread-pool"] }
env_logger = "0.9"
glam = { version = "0.20", features = ["bytemuck"] }
maplit = "1.0"
futures-intrusive = "0.4.0"
tobj = "2.0"
image = "0.24.5"
png = "0.16.8"
smol_str = { version = "0.1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8.0"
clap = { version = "4.0", features = ["cargo", "derive"] }
obj = "0.10"
#imgui = "0.8"
#imgui-winit-support = { version = "0.8.2", default-features = false, features = ["winit-26"] }
#imgui-wgpu = { version = "0.20" } #git = "https://github.com/Yatekii/imgui-wgpu-rs", rev = "5637d24e52426ff456e514a6191271605e4f7313" }
wgpu-subscriber = "0.1"
#cxx = "1.0.56"
pathfinding = "2.0"
indexmap = "1.6"
rand = "0.8"
hexasphere = "6.0"
rfd = "0.2.2"
pest = "2.1"
pest_derive = "2.1"

[build-dependencies]
cxx-build = "1.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
debug = true

[profile.dev.package.image]
opt-level = 2

#[patch.crates-io]
#wgpu-core = { path = "../wgpu/wgpu-core" }
#wgpu-hal = { path = "../wgpu/wgpu-hal" }
#wgpu-types = { path = "../wgpu/wgpu-types" }
#wgpu-info = { path = "../wgpu/wgpu-info" }
